sass/hbmenu.sass
$browsers: '', '-moz-', '-webkit-'
=transitions ($sec, $type: all, $accel: ease)
	@each $browser in $browsers
		#{$browser}transition: $type $sec $accel
=borderradius ($radius: 50%)
	@each $browser in $browsers
		#{$browser}border-radius: $radius
=boxsizing ($type: border-box)
	@each $browser in $browsers
		#{$browser}box-sizing: $type
$menucolor: #88a8ff
$fonts: "Montserrat",georgia,serif
*
	+boxsizing
body
	margin: 0
	padding: 0
	font-family: $fonts
a
	text-decoration: none
	font-family: $fonts
ul, li, a
	+transitions(.3s)
button, a, label
	cursor: pointer
.w280
	width: 280px
header
	max-width: 1280px
	margin: 0 auto
	display: block
	position: relative
	.top
		width: 100%
		height: 40px
		line-height: 40px
		padding: 0 16px
		.social
			// 
		span.right
			display: block
			text-align: right
			font-size: 14px
	.middle
		height: 100px
		display: flex
		align-items: center
		.account-menu
			display: block
			flex-basis: 0
			flex-grow: 4
			flex-shrink: 1
			a
				display: inline-block
				padding: 0 16px
				font-size: 12px
				color: #888
				height: 32px
				line-height: 32px
				img
					vertical-align: middle
		.search-container
			display: block
			flex-basis: 0
			flex-grow: 1.5
			flex-shrink: 1
			height: 50px
			line-height: 50px
			border: 1px solid #777
			padding: 0 16px
			position: relative
			background: #fff
			input[type="search"]
				height: 50px
				line-height: 50px
				width: 90%
				border: none
				font-size: 16px
				background: transparent
			button
				position: absolute
				right: 0
				top: 0
				height: 50px
				width: 50px
				background: transparent
				border: none
				img
					vertical-align: middle
		.logo-container
			display: block
			flex-basis: 0
			flex-grow: 1.5
			flex-shrink: 1
			height: 64px
			text-align: center
			img
				height: 100%
				width: auto
.header-menu
	background: $menucolor
	padding: 0
	margin: 0
	li.level-1
		display: inline-block
		font-weight: 600
		position: relative
		a
			color: #333
			text-transform: uppercase
			height: 50px
			line-height: 50px
			padding: 0 16px
			display: block
			@media screen and ( min-width: 641px )
				&:hover
					color: darken($menucolor, 28%)
					+
						ul.level-2-container
							height: auto
							display: block
						div.level-2-container.columns
							height: auto
							display: flex
		label.expand-sign
			position: absolute
			right: 0
			top: 0
			width: 50px
			height: 50px
			line-height: 40px
			font-size: 20px
			display: block
		.menu-children-expand
			display: none
			&:checked
				+
					ul.level-2-container
						display: contents
						height: auto
						li.level-2
							a
								font-weight: 400
					div.level-2-container.columns
						display: contents
						.column
							a
								font-weight: 400
								font-size: 16px
		ul.level-2-container
			height: 0
			display: none
			position: absolute
			top: 50px
			background: lighten($menucolor, 8%)
			padding-left: 0
			&:hover
				height: auto
				display: block
			li.level-2
				position: relative
				list-style-type: none
				a
					&:hover
						+
							ul.level-3-container
								width: auto
								height: auto
								display: block
				ul.level-3-container
					width: 0
					height: 0
					position: absolute
					display: none
					left: 100%
					top: 0
					background: lighten($menucolor, 8.8%)
					padding-left: 0
					&:hover
						width: auto
						height: auto
						display: block
					li.level-3
						list-style-type: none
						a
							word-wrap: none
							white-space: nowrap
		div.level-2-container.columns
			height: 0
			display: none
			position: absolute
			top: 50px
			background: lighten($menucolor, 8%)
			padding-left: 0
			.column
				display: block
				flex-basis: 0
				flex-grow: 1
				flex-shrink: 1
				padding: 0 8px
			&:hover
				height: auto
				display: flex
			a
				font-size: 14px
				white-space: nowrap
			.lists
				@extend .desktop-only
				a
					font-size: 12px
					display: block
					height: 32px
					line-height: 32px
	@media ( max-width: 640px )
		li.level-1
			display: block
@media ( min-width: 641px )
	.mobile-only
		display: none !important

@media ( max-width: 640px )
	.desktop-only
		display: none !important
	// on mobile
	header
		position: relative
		display: block
		.header-menu
			position: absolute
			top: 50px
			display: none
		.middle
			.account-menu
				position: absolute
				top: 50px
				display: none
				a
					color: #333
					text-transform: uppercase
					height: 50px
					line-height: 50px
					padding: 0 16px
					display: block
					font-weight: 600
					font-size: 16px
					background: $menucolor
			.search-container
				position: absolute
				top: 50px
				display: none
	#menu-1:checked
		~
			.header-menu
				display: block
				width: 100%
				text-align: center
				background: lighten($menucolor, 8%)
	#menu-2:checked
		~
			.middle
				.search-container
					display: block
					width: 100%
	#menu-3:checked
		~
			.middle
				.account-menu
					width: 100%
					text-align: center
					background: lighten($menucolor, 5%)
					display: block
.mobile-logo
	width: 100%
	text-align: center
	padding: 32px 0
.main-thumb-menu
	display: none
	&:checked
		+ label
			filter: invert(37%) sepia(71%) saturate(3678%) hue-rotate(206deg) brightness(77%) contrast(97%)

.main-menu
	display: flex
	background: $menucolor
	padding: 0 16px
	.main-thumb-menu-label
		display: block
		text-align: center
		flex-grow: 1
		flex-shrink: 1
		flex-basis: 0
		height: 50px
		line-height: 64px
		cursor: pointer
		img
			&:hover, &:focus, &:active
				filter: invert(37%) sepia(71%) saturate(3678%) hue-rotate(206deg) brightness(77%) contrast(97%)

